--- a/Rules.ini
+++ b/Rules.ini
@@ -83,27 +83,27 @@ ruleset=🚫 涩涩,[]DOMAIN-SUFFIX,htwhbook.com
 custom_proxy_group=🎯 总模式`select`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]DIRECT
 custom_proxy_group=Ⓜ️ 香港延迟`url-test`香港(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
 custom_proxy_group=♻️ 香港手动`select`香港.*`
-custom_proxy_group=Ⓜ️ 台湾延迟`url-test`台湾(?!.*(?:NF)).*`http://www.gstatic.com/generate_204`500,,150
+custom_proxy_group=♻️ 台湾手动`select`台湾.*`
 custom_proxy_group=♻️ 日本手动`select`日本.*`
 custom_proxy_group=♻️ 美国手动`select`美国.*`
-custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🧩 OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🧩 微软服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🧩 OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎥 NETFLIX`select`[]♻️ 香港手动`[]♻️ 日本手动
-custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]Ⓜ️ 台湾延迟`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎶 Tiktok`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🚫 涩涩`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=⛩ 日韩媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🌏 港台媒体`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🇺🇳 国外网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🇨🇳 国内网站`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]DIRECT`[]REJECT
 custom_proxy_group=⛔ 应用净化`select`[]DIRECT`[]REJECT
 
