--- a/Rules.ini
+++ b/Rules.ini
@@ -29,7 +29,8 @@ ruleset=🤖 OpenAI,https://raw.githubusercontent.com/flyhigherpi/merlinclash_cl
 ;游戏平台
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Steam.list
+ruleset=🎮 Steam,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Steam.list
+ruleset=🎮 Xbox,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/Xbox.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Ruleset/TencentLolm.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/flyhigherpi/merlinclash_clash_related/master/Rules/ACL4SSR/Clash/Other/Games.list
 ;国外媒体
@@ -174,7 +175,7 @@ custom_proxy_group=🧩 OneDrive`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[
 custom_proxy_group=🤖 OpenAI`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Steam`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🎮 Xbox`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
-custom_proxy_group=🎮 国外游戏`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=📲 聊天软件`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=🔍 谷歌服务`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
 custom_proxy_group=📹 YouTube`select`[]🎯 总模式`[]Ⓜ️ 香港延迟`[]♻️ 香港手动`[]♻️ 台湾手动`[]♻️ 新加坡手动`[]♻️ 日本手动`[]♻️ 美国手动`[]DIRECT
